--- a/starter/app/src/main/res/values/dimens.xml
+++ b/starter/app/src/main/res/values/dimens.xml
@@ -14,4 +14,6 @@
 
     <dimen name="sp_30">30sp</dimen>
     <dimen name="sp_28">28sp</dimen>
+    <dimen name="sp_16">16sp</dimen>
+
 </resources>
