--- a/starter/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/starter/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -14,6 +14,8 @@
 
     </data>
 
+    <!-- I Chose to use Constraint layout because I'm able to build more complex layouts more easily without having to nest View and ViewGroup elements.
+This makes it much easier to build my layouts and because of the above statement performance is better.-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
