--- a/starter/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/starter/app/src/main/res/layout/fragment_shoe_list.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- I Chose to use Constraint layout because I'm able to build more complex layouts more easily without having to nest View and ViewGroup elements.
+This makes it much easier to build my layouts and because of the above statement performance is better.-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
